# hjepa-moe

./: README.md  pyproject.toml  smoke_test.py  train_ablate_scale.py  universal_jepa.py
configs/: video_jepa_moe.yaml
examples/ac_video_jepa/: main.py
examples/image_jepa/: main.py
examples/video_jepa/: main.py
hjepa_moe/: __init__.py  model.py  model_vjepa2.py
hjepa_moe/encoders/: __init__.py  temporal.py
hjepa_moe/losses/: __init__.py  sigreg.py  vicreg.py
hjepa_moe/planners/: __init__.py  cem.py  cem_mppi.py
hjepa_moe/predictors/: __init__.py  moe_predictor.py
hjepa_moe/utils/: __init__.py  eval.py
tests/: test_hjepa_moe.py
tests/cbs_experiment/: README.md  __init__.py  cbs_jepa_wrapper.py  cbs_network.py  cbs_regimes.py  chaotic_dynamics.py  few_shot_ood_eval.py  smoke_test.py
